# drdd

./: .gitignore  README.md  pyproject.toml  requirements.txt
benchmark/: README.md
benchmark/scripts/: bench_ffmpeg.py  bench_xml.py  bench_zipmin.py
docs/paper/: section.tex
predicates/: README.md
predicates/ffmpeg/: Makefile
predicates/ffmpeg/ticket-10686/: config.toml
predicates/ffmpeg/ticket-10688/: config.toml
predicates/ffmpeg/ticket-10691/: config.toml  input
predicates/ffmpeg/ticket-10699/: config.toml  input
predicates/ffmpeg/ticket-10700/: config.toml
predicates/ffmpeg/ticket-10701/: config.toml
predicates/ffmpeg/ticket-10702/: config.toml  input
predicates/ffmpeg/ticket-10743/: config.toml  input
predicates/ffmpeg/ticket-10744/: config.toml  input
predicates/ffmpeg/ticket-10745/: config.toml  input
predicates/ffmpeg/ticket-10746/: config.toml  input
predicates/ffmpeg/ticket-10747/: config.toml  input
predicates/ffmpeg/ticket-10749/: config.toml
predicates/ffmpeg/ticket-10753/: config.toml  input
predicates/ffmpeg/ticket-10754/: config.toml  input
predicates/ffmpeg/ticket-10756/: config.toml  input
predicates/xml/: Makefile
scripts/: README.md  cherry_pick  cherrypick_xml  minimize_ffmpeg  minimize_xml
src/algos/: __init__.py  cdd.py  ddmin.py  ddprime.py  pmadd.py  probdd.py  ttmin.py
src/bench/: harness.py  logging.py
src/core/: logging.py  oracle.py
src/dd/: ddmin.py  zipmin.py
src/drivers/: basex.py  ffmpeg.py  logging.py  xml.py
src/utils/: fmt.py  oracle.py
tests/: test_sanity.py
(+9 files in other folders)
