[build-system]
requires = [
	"setuptools>=64",
	"wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "dd-lab"
version = "0.1.0"
description = "Delta Debugging algorithm implementations and benchmark infrastructure"
readme = "README.md"
requires-python = ">=3.11"
authors = [
	{ name = "Aarush Kumbhakern" },
]
dependencies = [
	"defusedxml",
	"saxonche",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

